--- a/TP1_etendu_precision.ipynb
+++ b/TP1_etendu_precision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "\n",
     "\n",
     "\n",
-    "def approximate(next_step_formula ,s0=0, t0=0,operator=lambda s, i :s + i, precision : float = None, iter : int = None , convergence_criteria=None ) -> float:\n",
+    "def approximate(next_step_formula ,s0=0, t0=0,operator=lambda s, i :s + i, precision : float = None, iter : int = None , convergence_criteria=None ) -> tuple:\n",
     "\n",
     "    assert precision != None or iter != None, \"both parameter are None\"\n",
     "\n",
@@ -138,7 +138,7 @@
     "            if s == 1:\n",
     "                convergence_criteria = lambda t, step, precision: np.abs(t - 1) > precision\n",
     "                \n",
-    "        while convergence_criteria(t,i,  precision):\n",
+    "        while convergence_criteria(t, i,  precision):\n",
     "            s = operator(s, t)\n",
     "            i += 1\n",
     "            t = next_step_formula(i)\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -404,33 +404,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dl_cosx(ti, x, precision, i):\n",
-    "    if ti < precision:\n",
-    "        return (ti, i)\n",
+    "def dl_cosx_recc(ti, x, precision, i):\n",
+    "    global iter \n",
+    "    if np.abs(ti) < precision:\n",
+    "        return ti\n",
     "    next_term = lambda ti,x, i : (-ti*x**2)/((2*i + 1)*(2*i + 2))\n",
-    "\n",
-    "    return (ti + dl_cosx(next_term(ti, x, i), x, precision, i+1)[0], i)"
+    "    iter = i\n",
+    "    return ti + dl_cosx_recc(next_term(ti, x, i), x, precision, i+1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pi/4 |  nombre diteration   |  precision           |  Cos(x) calcule      |  resultat numpy      |  erreur en valeur absolu\n",
-      "pi/4 |  0                   |  0.1                 |  0.6915748624659576  |  0.7071067811865476  |  0.01553191872059001 \n",
-      "pi/4 |  0                   |  0.01                |  0.6915748624659576  |  0.7071067811865476  |  0.01553191872059001 \n",
-      "pi/4 |  0                   |  0.001               |  0.6915748624659576  |  0.7071067811865476  |  0.01553191872059001 \n",
-      "pi/4 |  0                   |  0.0001              |  0.6915748624659576  |  0.7071067811865476  |  0.01553191872059001 \n",
-      "pi/4 |  0                   |  1e-05               |  0.6915748624659576  |  0.7071067811865476  |  0.01553191872059001 \n"
+      "x    |  nombre diteration   |  precision           |  Cos(x) calcule      |  resultat numpy      |  erreur en valeur absolu\n",
+      "pi/4 |  1                   |  0.1                 |  0.707429206709773   |  0.7071067811865476  |  0.000322425523225478\n",
+      "pi/4 |  2                   |  0.01                |  0.7071032148228457  |  0.7071067811865476  |  3.566363701912323e-06\n",
+      "pi/4 |  2                   |  0.001               |  0.7071032148228457  |  0.7071067811865476  |  3.566363701912323e-06\n",
+      "pi/4 |  3                   |  0.0001              |  0.7071068056832943  |  0.7071067811865476  |  2.4496746742208586e-08\n",
+      "pi/4 |  3                   |  1e-05               |  0.7071068056832943  |  0.7071067811865476  |  2.4496746742208586e-08\n"
      ]
     }
    ],
@@ -439,21 +440,19 @@
     "\n",
     "\n",
     "s = 0\n",
-    "t = 1\n",
     "i = 0\n",
     "\n",
     "precisions = [10**-i for i in range(1, 6)]\n",
     "\n",
     "cos_numpy = np.cos(x)\n",
-    "entete = \"{:<5}|  {:<20}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"pi/4\", \"nombre diteration\",\"precision\" ,\"Cos(x) calcule\", \"resultat numpy\", \"erreur en valeur absolu\" )\n",
+    "entete = \"{:<5}|  {:<20}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"x\", \"nombre diteration\",\"precision\" ,\"Cos(x) calcule\", \"resultat numpy\", \"erreur en valeur absolu\" )\n",
     "print(entete)\n",
     "\n",
     "for precision in precisions:\n",
     "    s = 1\n",
-    "    t = 1\n",
     "    i = 0\n",
-    "\n",
-    "    s, iter = dl_cosx(s, x, precision, i)\n",
+    "    iter = 0\n",
+    "    s = dl_cosx_recc(s, x, precision, i)\n",
     "    ligne= \"{:<5}|  {:<20}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"pi/4\", iter, precision ,s, cos_numpy, np.abs(s-cos_numpy))\n",
     "    print(ligne)\n"
    ]
@@ -461,7 +460,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Avec sommation successif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x    |  nombre diteration   |  precision           |  Cos(x) calcule      |  resultat numpy      |  erreur en valeur absolu\n",
+      "pi/4 |  5                   |  1e-06               |  0.7071068056832942  |  0.7071067811865476  |  2.4496746631186284e-08\n",
+      "pi/4 |  5                   |  1e-07               |  0.7071068056832942  |  0.7071067811865476  |  2.4496746631186284e-08\n",
+      "pi/4 |  6                   |  1e-08               |  0.7071067810719247  |  0.7071067811865476  |  1.146228667536775e-10\n",
+      "pi/4 |  6                   |  1e-09               |  0.7071067810719247  |  0.7071067811865476  |  1.146228667536775e-10\n",
+      "pi/4 |  7                   |  1e-10               |  0.7071067811869363  |  0.7071067811865476  |  3.886890809212673e-13\n",
+      "pi/4 |  7                   |  1e-11               |  0.7071067811869363  |  0.7071067811865476  |  3.886890809212673e-13\n",
+      "pi/4 |  7                   |  1e-12               |  0.7071067811869363  |  0.7071067811865476  |  3.886890809212673e-13\n",
+      "pi/4 |  8                   |  1e-13               |  0.7071067811865465  |  0.7071067811865476  |  1.1102230246251565e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "terme_i = lambda i: (-1)**i *  (x**(2*i)/recc_fact(2*i))\n",
+    "\n",
+    "entete = \"{:<5}|  {:<20}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"x\", \"nombre diteration\",\"precision\" ,\"Cos(x) calcule\", \"resultat numpy\", \"erreur en valeur absolu\" )\n",
+    "print(entete)\n",
+    "\n",
+    "\n",
+    "for precision in [10**-i for i in range(6, 14)] :\n",
+    "    approx, iteration = approximate(terme_i,s0=0, t0=1, precision=precision)\n",
+    "    ligne= \"{:<5}|  {:<20}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"pi/4\", iteration, precision ,approx, cos_numpy, np.abs(approx-cos_numpy))\n",
+    "    print(ligne)"
+   ]
   }
  ],
  "metadata": {
