--- a/TP2_methode_numerique_resolution_equation.ipynb
+++ b/TP2_methode_numerique_resolution_equation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +81,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +138,7 @@
     "                    a = c\n",
     "\n",
     "            \n",
-    "            precision = (b-a)/2**(iteration) \n",
+    "            precision = (b-a)\n",
     "            \n",
     "            return Racine(\n",
     "                racine=(a+b)/2,\n",
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,16 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "np.exp(-x/10)-x     |  racine calcule      |  nombre d'iteration  |  precision           \n",
-      "                    |  0.9127578735351562  |  16                  |  2.3283064365386963e-10\n",
-      "                    |  0.912765271612443   |  32                  |  5.421010862427522e-20\n",
+      "                    |  0.9127578735351562  |  16                  |  1.52587890625e-05   \n",
+      "                    |  0.912765271612443   |  32                  |  2.3283064365386963e-10\n",
       "                    |  0.9127652716086228  |  64                  |  0.0                 \n",
       "                    |  0.9127652716086228  |  128                 |  0.0                 \n",
       "                    |  0.9127652716086228  |  256                 |  0.0                 \n",
@@ -206,6 +207,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -308,11 +310,11 @@
      "output_type": "stream",
      "text": [
       "np.exp(-x/10)-x     |  racine calcule      |  nombre d'iteration  |  precision           \n",
-      "                    |  0.875               |  2                   |  0.0625              \n",
-      "                    |  0.90625             |  4                   |  0.00390625          \n",
-      "                    |  0.912109375         |  8                   |  1.52587890625e-05   \n",
-      "                    |  0.9127578735351562  |  16                  |  2.3283064365386963e-10\n",
-      "                    |  0.912765271612443   |  32                  |  5.421010862427522e-20\n",
+      "                    |  0.875               |  2                   |  0.25                \n",
+      "                    |  0.90625             |  4                   |  0.0625              \n",
+      "                    |  0.912109375         |  8                   |  0.00390625          \n",
+      "                    |  0.9127578735351562  |  16                  |  1.52587890625e-05   \n",
+      "                    |  0.912765271612443   |  32                  |  2.3283064365386963e-10\n",
       "                    |  0.9127652716086228  |  64                  |  0.0                 \n"
      ]
     }
@@ -326,6 +328,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +380,7 @@
        "3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +400,7 @@
        "34"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +452,7 @@
     "            \n",
     "        \n",
     "\n",
-    "    def __call__(self, precision=None, iteration=None, maxiter=10**9) -> Racine:\n",
+    "    def __call__(self, precision=None, iteration=None, maxiter=10**6) -> Racine:\n",
     "        assert precision != None or iteration != None, \"precision et nombre d'iteration tous null\" \n",
     "\n",
     "        f, xm, xi = self.f, self.a, self.b\n",
@@ -473,9 +477,13 @@
     "        \n",
     "        if iteration:\n",
     "            for i in range(iteration):\n",
+    "                if f(xm) - f(xi) == 0:\n",
+    "                    break\n",
     "                xp= xm -  f(xm)*(xm - xi)/(f(xm) - f(xi))\n",
+    "                \n",
     "                xm = xi\n",
     "                xi = xp\n",
+    "                \n",
     "            precision = np.abs(xi-xm)\n",
     "            return Racine(\n",
     "                racine=xp,\n",
@@ -486,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -525,8 +533,8 @@
      "output_type": "stream",
      "text": [
       "np.exp(-x/10)-x     |  racine calcule      |  nombre d'iteration  |  precision           \n",
-      "                    |  0.9127666091859894  |  2                   |  0.0                 \n",
-      "                    |  0.9127652716291836  |  4                   |  0.0                 \n",
+      "                    |  0.9127651474614689  |  2                   |  0.0003412866595928765\n",
+      "                    |  0.9127652716086226  |  4                   |  1.7708057242771247e-13\n",
       "                    |  0.9127652716086226  |  8                   |  0.0                 \n",
       "                    |  0.9127652716086226  |  16                  |  0.0                 \n"
      ]
@@ -535,12 +543,13 @@
    "source": [
     "print(entete)\n",
     "for iteration in [2**i for i in range(1, 5)]:\n",
-    "    racine = lagrange(iteration=iteration)\n",
+    "    racine = secante(iteration=iteration)\n",
     "    ligne= \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
     "    print(ligne)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -584,6 +593,134 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Methode de Newton"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NewtonResolver(Resolver):\n",
+    "    h = np.finfo(float).eps*4\n",
+    "    \n",
+    "    def __new__(cls, f, x0, a, b, ) :\n",
+    "        if f(a)*f(b) >0:\n",
+    "            raise RacineOutOfIntervale()\n",
+    "        a, b = min(a, b), max(a, b)\n",
+    "        assert a <= x0 <= b\n",
+    "        assert NewtonResolver.derive_1(f, x0) *NewtonResolver.derive_2(f, x0) > 0\n",
+    "        # verification de la concavité\n",
+    "        obj = object.__new__(cls)\n",
+    "        obj.f = f\n",
+    "        obj.a, obj.b = min(a, b), max(a, b)\n",
+    "        obj.x0 = x0\n",
+    "        return obj\n",
+    "\n",
+    "    @classmethod\n",
+    "    def derive_1(f, x0):\n",
+    "        h = NewtonResolver.h\n",
+    "        return (f(x0+h) - f(x0-h))/(2*h)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def derive_2(f, x0):\n",
+    "        h = NewtonResolver.h\n",
+    "        return (f(x0+h) + f(x0-h) - 2*f(x0))/(h**2)\n",
+    "    \n",
+    "            \n",
+    "        \n",
+    "\n",
+    "    def __call__(self,fprime=None, precision=None, iteration=None, maxiter=10**6) -> Racine:\n",
+    "        assert precision != None or iteration != None, \"precision et nombre d'iteration tous null\" \n",
+    "\n",
+    "        f, a, b, xi = self.f, self.a, self.b, self.x0\n",
+    "        i = 0\n",
+    "        \n",
+    "        if not fprime:\n",
+    "            fprime = NewtonResolver.derive_1\n",
+    "\n",
+    "        xp = xi - f(xi)/fprime(f, xi)\n",
+    "        if precision:\n",
+    "            while np.abs(xi - xp) > precision:\n",
+    "                xi = xp\n",
+    "                xp =xi - f(xi)/fprime(f, xi)\n",
+    "                i += 1\n",
+    "                if i == maxiter:\n",
+    "                    raise MaxtIterationExceded(\"Nombre d'iteration maximal atteinte, racine obtenue \", xp)\n",
+    "            return Racine(\n",
+    "                racine=xp,\n",
+    "                precision=precision,\n",
+    "                iteration=i\n",
+    "            )\n",
+    "        \n",
+    "        if iteration:\n",
+    "            for i in range(iteration):\n",
+    "                xi = xp\n",
+    "                xp =xi - f(xi)/fprime(f, xi)\n",
+    "                \n",
+    "            precision = np.abs(xi-xp)\n",
+    "            return Racine(\n",
+    "                racine=xp,\n",
+    "                precision=precision,\n",
+    "                iteration=iteration\n",
+    "            )\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resoltion de Newton avec frime de approximé"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "NewtonResolver.derive_1() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m f \u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x: (\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m)\u001b[39m*\u001b[39mx\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m \u001b[39m-\u001b[39m \u001b[39m2\u001b[39m\u001b[39m*\u001b[39mx\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m3\u001b[39m\u001b[39m*\u001b[39mx \u001b[39m-\u001b[39m (\u001b[39m5\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m newton \u001b[39m=\u001b[39m NewtonResolver(f,\u001b[39m4.1\u001b[39;49m, \u001b[39m4\u001b[39;49m, \u001b[39m5\u001b[39;49m) \n\u001b[1;32m      4\u001b[0m entete \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39m\"\u001b[39m\u001b[39m(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mracine calcule\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mnombre d\u001b[39m\u001b[39m'\u001b[39m\u001b[39miteration\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mprecision\u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(entete)\n",
+      "Cell \u001b[0;32mIn[31], line 9\u001b[0m, in \u001b[0;36mNewtonResolver.__new__\u001b[0;34m(cls, f, x0, a, b)\u001b[0m\n\u001b[1;32m      7\u001b[0m a, b \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(a, b), \u001b[39mmax\u001b[39m(a, b)\n\u001b[1;32m      8\u001b[0m \u001b[39massert\u001b[39;00m a \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m x0 \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m b\n\u001b[0;32m----> 9\u001b[0m \u001b[39massert\u001b[39;00m NewtonResolver\u001b[39m.\u001b[39;49mderive_1(f, x0) \u001b[39m*\u001b[39mNewtonResolver\u001b[39m.\u001b[39mderive_2(f, x0) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# verification de la concavité\u001b[39;00m\n\u001b[1;32m     11\u001b[0m obj \u001b[39m=\u001b[39m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__new__\u001b[39m(\u001b[39mcls\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: NewtonResolver.derive_1() takes 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "f =lambda x: (1/3)*x**3 - 2*x**2 + 3*x - (5/2)\n",
+    "\n",
+    "newton = NewtonResolver(f,4.1, 4, 5) \n",
+    "entete = \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "\n",
+    "print(entete)\n",
+    "for precision in [10**-i for i in range(5, 10)]:\n",
+    "    racine = newton(precision=precision)\n",
+    "    ligne= \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "    print(ligne)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -607,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
