added new methods

--- a/TP2_methode_numerique_resolution_equation.ipynb
+++ b/TP2_methode_numerique_resolution_equation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,6 @@
     "        \"\"\"\n",
     "    @abstractclassmethod\n",
     "    def __call__(self, precision=None, iteration=None, has_converged=None) -> tuple :\n",
-    "        \n",
     "        pass\n",
     "    \n",
     "    "
@@ -602,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +613,7 @@
     "            raise RacineOutOfIntervale()\n",
     "        a, b = min(a, b), max(a, b)\n",
     "        assert a <= x0 <= b\n",
-    "        assert NewtonResolver.derive_1(f, x0) *NewtonResolver.derive_2(f, x0) > 0\n",
+    "        #assert NewtonResolver.derive_1(f, x0) *NewtonResolver.derive_2(f, x0) > 0\n",
     "        # verification de la concavité\n",
     "        obj = object.__new__(cls)\n",
     "        obj.f = f\n",
@@ -623,12 +622,12 @@
     "        return obj\n",
     "\n",
     "    @classmethod\n",
-    "    def derive_1(f, x0):\n",
+    "    def derive_1(cls, f, x0):\n",
     "        h = NewtonResolver.h\n",
     "        return (f(x0+h) - f(x0-h))/(2*h)\n",
     "\n",
     "    @classmethod\n",
-    "    def derive_2(f, x0):\n",
+    "    def derive_2(cls, f, x0):\n",
     "        h = NewtonResolver.h\n",
     "        return (f(x0+h) + f(x0-h) - 2*f(x0))/(h**2)\n",
     "    \n",
@@ -639,15 +638,18 @@
     "        assert precision != None or iteration != None, \"precision et nombre d'iteration tous null\" \n",
     "\n",
     "        f, a, b, xi = self.f, self.a, self.b, self.x0\n",
-    "        i = 0\n",
+    "        i = 1\n",
     "        \n",
     "        if not fprime:\n",
     "            fprime = NewtonResolver.derive_1\n",
     "\n",
     "        xp = xi - f(xi)/fprime(f, xi)\n",
     "        if precision:\n",
-    "            while np.abs(xi - xp) > precision:\n",
+    "            while np.abs(xi - xp) > precision :\n",
     "                xi = xp\n",
+    "                if fprime(f, xi) < NewtonResolver.h:\n",
+    "                    break\n",
+    "\n",
     "                xp =xi - f(xi)/fprime(f, xi)\n",
     "                i += 1\n",
     "                if i == maxiter:\n",
@@ -681,19 +683,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "NewtonResolver.derive_1() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m f \u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x: (\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m)\u001b[39m*\u001b[39mx\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m \u001b[39m-\u001b[39m \u001b[39m2\u001b[39m\u001b[39m*\u001b[39mx\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m3\u001b[39m\u001b[39m*\u001b[39mx \u001b[39m-\u001b[39m (\u001b[39m5\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m newton \u001b[39m=\u001b[39m NewtonResolver(f,\u001b[39m4.1\u001b[39;49m, \u001b[39m4\u001b[39;49m, \u001b[39m5\u001b[39;49m) \n\u001b[1;32m      4\u001b[0m entete \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m|  \u001b[39m\u001b[39m{:<20}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39m\"\u001b[39m\u001b[39m(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mracine calcule\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mnombre d\u001b[39m\u001b[39m'\u001b[39m\u001b[39miteration\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mprecision\u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(entete)\n",
-      "Cell \u001b[0;32mIn[31], line 9\u001b[0m, in \u001b[0;36mNewtonResolver.__new__\u001b[0;34m(cls, f, x0, a, b)\u001b[0m\n\u001b[1;32m      7\u001b[0m a, b \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(a, b), \u001b[39mmax\u001b[39m(a, b)\n\u001b[1;32m      8\u001b[0m \u001b[39massert\u001b[39;00m a \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m x0 \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m b\n\u001b[0;32m----> 9\u001b[0m \u001b[39massert\u001b[39;00m NewtonResolver\u001b[39m.\u001b[39;49mderive_1(f, x0) \u001b[39m*\u001b[39mNewtonResolver\u001b[39m.\u001b[39mderive_2(f, x0) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# verification de la concavité\u001b[39;00m\n\u001b[1;32m     11\u001b[0m obj \u001b[39m=\u001b[39m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__new__\u001b[39m(\u001b[39mcls\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: NewtonResolver.derive_1() takes 2 positional arguments but 3 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1/3)*x**3 - 2*x**2 + 3*x - (5/2)  |  racine calcule      |  nombre d'iteration  |  precision           \n",
+      "                                   |  4.317935804416695   |  14                  |  1e-05               \n",
+      "                                   |  4.3179259285967735  |  15                  |  1e-06               \n",
+      "                                   |  4.3179259285967735  |  15                  |  1e-07               \n",
+      "                                   |  4.3179259285967735  |  15                  |  1e-08               \n",
+      "                                   |  4.3179259285967735  |  15                  |  1e-09               \n"
      ]
     }
    ],
@@ -701,22 +703,61 @@
     "f =lambda x: (1/3)*x**3 - 2*x**2 + 3*x - (5/2)\n",
     "\n",
     "newton = NewtonResolver(f,4.1, 4, 5) \n",
-    "entete = \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "entete = \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
     "\n",
     "print(entete)\n",
     "for precision in [10**-i for i in range(5, 10)]:\n",
     "    racine = newton(precision=precision)\n",
-    "    ligne= \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "    ligne= \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
     "    print(ligne)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "## Resoltion de Newton avec frime analytique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1/3)*x**3 - 2*x**2 + 3*x - (5/2)  |  racine calcule      |  nombre d'iteration  |  precision           \n",
+      "                                   |  4.317931287501243   |  3                   |  1e-05               \n",
+      "                                   |  4.317931287501243   |  3                   |  1e-06               \n",
+      "                                   |  4.317931287501235   |  4                   |  1e-07               \n",
+      "                                   |  4.317931287501235   |  4                   |  1e-08               \n",
+      "                                   |  4.317931287501235   |  4                   |  1e-09               \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "f =lambda x: (1/3)*x**3 - 2*x**2 + 3*x - (5/2)\n",
+    "fprime = lambda f, x : x**2 - 4*x + 3\n",
+    "newton = NewtonResolver(f,4.1, 4, 5) \n",
+    "entete = \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "\n",
+    "print(entete)\n",
+    "for precision in [10**-i for i in range(5, 10)]:\n",
+    "    racine = newton(fprime=fprime, precision=precision)\n",
+    "    ligne= \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "    print(ligne)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## comparaison avec scipy.optimize.root_scaler(methode=\"secant\")"
    ]
   },
   {
@@ -725,6 +766,218 @@
    "metadata": {},
    "source": [
     "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import root_scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1/3)*x**3 - 2*x**2 + 3*x - (5/2)  |  racine calcule      |  nombre d'iteration  |  racine scipy        |  nombre d'iteration scipy\n",
+      "                                   |  4.317931287501235   |  4                   |  4.317931287501235   |  5                   \n"
+     ]
+    }
+   ],
+   "source": [
+    "fprime_scpiy = lambda  x : x**2 - 4*x + 3\n",
+    "fprime = lambda f, x: fprime_scpiy(x)\n",
+    "\n",
+    "racine = newton(fprime=fprime, precision=10**(-10))\n",
+    "\n",
+    "entete = \"{:<35}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\",\"nombre d'iteration\", \"racine scipy\", \"nombre d'iteration scipy\")\n",
+    "\n",
+    "print(entete)\n",
+    "\n",
+    "ligne= \"{:<35}|  {:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, root.root, root.iterations)\n",
+    "print(ligne)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Methode du point fixe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FixedPoint(Resolver):\n",
+    "    \n",
+    "    def __new__(cls, f, g, a, b,  x0=None) :\n",
+    "        \n",
+    "        a, b = min(a, b), max(a, b)\n",
+    "        if not x0:\n",
+    "            x0 = a\n",
+    "        else:\n",
+    "            assert a <= x0 <= b\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        interval = np.linspace(a, b, 100)\n",
+    "        interval_img = NewtonResolver.derive_1(g, interval)\n",
+    "        interval_img = np.abs(interval_img)\n",
+    "        if not all(interval_img < 1):\n",
+    "            raise RacineOutOfIntervale(\"Le resolution est impossible sur cette intervale : g n'est pas contracte\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "       \n",
+    "        obj = object.__new__(cls)\n",
+    "        obj.f = f\n",
+    "        obj.g = g\n",
+    "        obj.a, obj.b = min(a, b), max(a, b)\n",
+    "        obj.x0 = x0\n",
+    "        return obj\n",
+    "    \n",
+    "            \n",
+    "        \n",
+    "\n",
+    "    def __call__(self, fprime=None, precision=None, iteration=None, maxiter=10**6) -> Racine:\n",
+    "        assert precision != None or iteration != None, \"precision et nombre d'iteration tous null\" \n",
+    "\n",
+    "        f,g, a, b, xi = self.f, self.g, self.a, self.b, self.x0\n",
+    "        i = 1\n",
+    "\n",
+    "        if not fprime:\n",
+    "            fprime = NewtonResolver.derive_1\n",
+    "\n",
+    "        xp = g(xi)\n",
+    "        if precision:\n",
+    "            while np.abs(xi - xp) > precision :\n",
+    "                xi = xp\n",
+    "                xp = g(xi)\n",
+    "                i += 1\n",
+    "                if i == maxiter:\n",
+    "                    raise MaxtIterationExceded(\"Nombre d'iteration maximal atteinte, racine obtenue \", xp)\n",
+    "            return Racine(\n",
+    "                racine=xp,\n",
+    "                precision=precision,\n",
+    "                iteration=i\n",
+    "            )\n",
+    "        \n",
+    "        if iteration:\n",
+    "            for i in range(iteration):\n",
+    "                xi = xp\n",
+    "                xp = g(xi)\n",
+    "                \n",
+    "            precision = np.abs(xi-xp)\n",
+    "            return Racine(\n",
+    "                racine=xp,\n",
+    "                precision=precision,\n",
+    "                iteration=iteration\n",
+    "            )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le resolution est impossible sur cette intervale : g n'est pas contracte\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    f =lambda x: (1/3)*x**3 - 2*x**2 + 3*x - (5/2)\n",
+    "    g = lambda x : (-x**3)/9 + (2/3)*x**2 + 5/6\n",
+    "    fixed_point = FixedPoint(f, g,  4, 5, x0=4.1) \n",
+    "    entete = \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "\n",
+    "    print(entete)\n",
+    "    for precision in [10**-i for i in range(5, 10)]:\n",
+    "        racine = fixed_point( precision=precision)\n",
+    "        ligne= \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "        print(ligne)\n",
+    "except RacineOutOfIntervale as e:\n",
+    "    print(e.args[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le resolution est impossible sur cette intervale : g n'est pas contracte\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    f =lambda x: (1/3)*x**3 - 2*x**2 + 3*x - (5/2)\n",
+    "    g = lambda x : ((1/6)*x**3 + (2/3)*x -5/4)**.5\n",
+    "    fixed_point = FixedPoint(f, g,  4, 5, x0=4.1) \n",
+    "    entete = \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"(1/3)*x**3 - 2*x**2 + 3*x - (5/2)\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "\n",
+    "    print(entete)\n",
+    "    for precision in [10**-i for i in range(5, 10)]:\n",
+    "        racine = fixed_point( precision=precision)\n",
+    "        ligne= \"{:<35}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "        print(ligne)\n",
+    "except RacineOutOfIntervale as e:\n",
+    "    print(e.args[0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.exp(-.1*x) - x   |  racine calcule      |  nombre d'iteration  |  precision           \n",
+      "                    |  0.9127647211181605  |  5                   |  1e-05               \n",
+      "                    |  0.9127653218554816  |  6                   |  1e-06               \n",
+      "                    |  0.9127652670222639  |  7                   |  1e-07               \n",
+      "                    |  0.9127652720272496  |  8                   |  1e-08               \n",
+      "                    |  0.9127652715704119  |  9                   |  1e-09               \n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    f =lambda x: np.exp(-.1*x) - x\n",
+    "    g = lambda x : np.exp(-.1*x)\n",
+    "    fixed_point = FixedPoint(f, g,  1, 2) \n",
+    "    entete = \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"np.exp(-.1*x) - x\", \"racine calcule\", \"nombre d'iteration\",\"precision\" )\n",
+    "\n",
+    "    print(entete)\n",
+    "    for precision in [10**-i for i in range(5, 10)]:\n",
+    "        racine = fixed_point( precision=precision)\n",
+    "        ligne= \"{:<20}|  {:<20}|  {:<20}|  {:<20}\".format(\"\", racine.racine, racine.iteration, racine.precision)\n",
+    "        print(ligne)\n",
+    "except RacineOutOfIntervale as e:\n",
+    "    print(e.args[0])\n",
+    "\n"
    ]
   }
  ],
